# dais26-mlops-for-dl-on-air

./: .air-availability-state.json  .gitignore  LICENSE  Makefile  README.md  databricks.yml  docs-requirements.txt  mkdocs.yml  pyproject.toml
.cursor/plans/: mlflow_deployment_jobs_123c5bf9.plan.md
.github/workflows/: ci.yml  deploy.yml  docs.yml  weekly_air_check.yml
air/: README.md  workload_sweep.yaml  workload_train_detector.yaml  workload_train_detector_dinov3.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  DECK_BRIEF_DL_MLOPS.md  HPO.md  README.md  RUNBOOK.md  TALK.md  index.md
docs/getting-started/: installation.md  overview.md  prerequisites.md  quickstart-air.md  quickstart-dab.md
docs/lanes/: air.md  configuration.md  dab.md  overview.md
docs/lifecycle/: embeddings-vector-search-drift.md  evaluate-approve-promote.md  hpo-sweep.md  overview.md  rollback.md  serve.md  setup-and-data.md  train-and-register.md
docs/reference/: cli.md  configuration.md  jobs.md  notebooks.md  scripts.md  troubleshooting.md  uc-resources.md
docs/scenarios/: cicd.md  dinov2-fallback.md  drift-monitoring.md  env-overrides.md  production-deploy.md  serving-smoke-test.md  switch-backbone.md  vector-search-query.md
docs/superpowers/specs/: 2026-06-15-docs-harmonization-github-pages-design.md
notebooks/: 00_config.py  00_setup.py  01_explore_dentex.py  02_train_detector_air.py  02a_arch_probe.py  02b_hpo_sweep.py  02c_anchor_ab.py  02d_dinov3_smoke.py  03_precompute_embeddings.py  04_deploy_serving.py  04b_create_vector_search.py  05_drift_demo.py  06_similarity_search_demo.py  07_latency_benchmark.py  08_backbone_comparison.py  09_eval_comparison.py  09b_eval_threshold_grid.py  10_deploy_eval_task.py  11_deploy_approval_task.py  12_promote_task.py  13_connect_deployment_job.py  14_champion_deploy.py
notebooks/diagnostics/: 02a_arch_probe.py
resources/experiments/: vfm_experiment.yml
resources/jobs/: anchor_ab_dinov3.yml  campaign_sweep.yml  connect_deployment_job.yml  create_vector_search.yml  deploy_champion_job.yml  deploy_endpoint.yml  deploy_job_detector.yml  dinov3_smoke.yml  drift_monitor.yml  eval_comparison.yml  eval_threshold_grid.yml  hpo_sweep.yml  precompute_embeddings.yml  train_detector.yml
resources/registered_models/: detector_models.yml  detector_models_champion.yml
scripts/: deploy_bundle.sh  discover_air_runtime.py  download_dentex.py  grant_inference_table_access.py  latency_probe.sh  pin_model_cache.py  probe_endpoint_gpu.py  register_dinov2_fallback.py  upload_wheel.sh  warmup_endpoints.py
sgcli/: README.md  requirements.yaml  workload_sweep.yaml  workload_train_detector.yaml  workload_train_detector_dinov3.yaml
src/dais26_dentex/: __init__.py
src/dais26_dentex/config/: __init__.py  campaigns.py  champion.py  constants.py  environments.py  manifest.py  recipes.py  trainer_config.py
src/dais26_dentex/data/: dataset.py  dentex_loader.py  transforms.py
src/dais26_dentex/distributed/: __init__.py  barrier_dance.py  primitives.py
src/dais26_dentex/drift/: embeddings.py  inference_table_reader.py  monitor.py  reference.py
src/dais26_dentex/eval/: coco_metrics.py  runner.py
src/dais26_dentex/models/: adapters.py  arch_probe.py  backbones.py  builder.py  detection_head.py  peft.py  targets.py
src/dais26_dentex/platform/: __init__.py  hf_env.py  mlflow_io.py  uc.py
src/dais26_dentex/serve/: detector_model_script.py  detector_pyfunc.py  embedder_pyfunc.py  endpoint_manager.py  postprocess.py  vector_search.py
src/dais26_dentex/train/: cli.py  distributed_utils.py  losses.py  precompute_embeddings.py  sweep.py  sweep_cli.py  sweep_runner.py  train_detector.py  trainer.py
src/data/: dataset.py  dentex_loader.py  transforms.py
src/drift/: embeddings.py  monitor.py  reference.py
src/models/: adapters.py  backbones.py  detection_head.py  peft.py
src/serve/: detector_pyfunc.py  embedder_pyfunc.py  endpoint_manager.py
src/train/: cli.py  distributed_utils.py  precompute_embeddings.py  train_detector.py
tests/: conftest.py
tests/fixtures/dentex_mini/annotations/: train.json  val.json
tests/integration/: test_endpoint_deploy_sdk.py
tests/unit/: test_air_yaml.py  test_arch_probe.py  test_artifact_schema.py  test_backbone_loading.py  test_backbones_dep_guard.py  test_campaigns.py  test_champion.py  test_champion_backbone.py  test_cli.py  test_coco_metrics.py  test_constants.py  test_dataset.py  test_ddp_smoke.py  test_dentex_loader.py  test_detection_head.py  test_distributed_utils.py  test_drift_scoring.py  test_endpoint_manager.py  test_environments.py  test_eval_runner.py  test_fpn_adapter.py  test_hf_env.py  test_inference_table_parser.py  test_layer_fusion.py  test_losses.py  test_peft.py  test_pyfunc_detector.py  test_pyfunc_embedder.py  test_pyfunc_signature.py  test_pyproject_cradio_deps.py  test_quickstart_lanes.py  test_rank0_first.py  test_recipes.py  test_register_logged_model.py  test_safe_barrier.py  test_sgcli_yaml.py  test_sweep.py  test_sweep_cli.py  test_sweep_runner.py  test_targets.py  (+8 more)
