[project]
name = "dais26-mlops-for-dl-on-air"
version = "0.1.0"
description = "DAIS26 MLOps for AI Runtime with Vision Foundation Models (DINOv3 + C-RADIOv4)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Michael Shtelma" }]
dependencies = [
    "torch>=2.5.0,<3.0",
    "torchvision>=0.20.0,<1.0",
    "transformers>=4.48.0,<5.0",
    "mlflow>=2.18.0,<3.0",
    "databricks-sdk>=0.38.0,<1.0",
    "databricks-vectorsearch>=0.40,<1.0",
    "peft>=0.14.0,<1.0",
    "albumentations>=1.4.0,<2.0",
    "pycocotools>=2.0.8",
    "scikit-learn>=1.5.0,<2.0",
    "scipy>=1.14.0,<2.0",
    "numpy>=1.26.0,<2.0",
    "pandas>=2.2.0,<3.0",
    "Pillow>=10.4.0,<12.0",
    "huggingface-hub>=0.26.0,<1.0",
    "plotly>=5.24.0,<7.0",
    "umap-learn>=0.5.6,<1.0",
    "tqdm>=4.66.0,<5.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-cov>=5.0.0,<6.0",
    "ruff>=0.8.0,<1.0",
    "pyright>=1.1.380",
]
air = [
    "serverless_gpu",
]

[project.scripts]
dais26-train = "src.train.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"notebooks/**" = ["E402", "F401", "F821", "I001", "N812", "SIM105"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "integration: marks tests that require a Databricks workspace",
]
